--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="main-title">
           <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
         </div>
-        <p class="port-text">Here is some of my work.</p>
+        <p class="port-text">Here's some of my work.</p>
         <div class="portfolios">
           <div class="port-item">
             <div class="image">
