--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
         <div class="right-header">
           <h1 class="name">
             Hi, I'm <span class="name">Aurelius Nguyen.</span> <br />
-            A Vietnamese who codes to impress others.
+            A Vietnamese computer science enthusiast.
           </h1>
           <p>
-            My dream scares me.
-            I think it's big enough.
+            My dream is to implement coding to resolve real life crisis.
           </p>
           <div class="btn-con">
             <a href="#" class="main-btn" onclick="downloadFile(event)">
@@ -58,13 +57,13 @@
           <div class="left-about">
             <h4>Information about me</h4>
             <p>
-              Do you know what would happen if I suddenly decided to stop going
+              "Do you know what would happen if I suddenly decided to stop going
               into work? A business big enough that it could be listed on the
               NASDAQ goes belly up. Disappears! It ceases to exist without me.
               No, you clearly don't know who you're talking to, so let me clue
               you in. I am not in danger, Skyler. I am the danger. A guy opens
               his door and gets shot and you think that of me? No. I am the one
-              who knocks!
+              who knocks!" - Walter White (Breaking Bad)
             </p>
             <div class="btn-con">
               <a href="#" class="main-btn" onclick="downloadFile(event)">
@@ -90,8 +89,8 @@
             </div>
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">$40k+</p>
-                <p class="small-text">Grants <br />Earned</p>
+                <p class="large-text">5+</p>
+                <p class="small-text">Projects <br />Created</p>
               </div>
             </div>
             <div class="about-item">
@@ -176,7 +175,7 @@
               <i class="fas fa-book"></i>
             </div>
             <p class="tl-duration">2023 - 2027</p>
-            <h5>Bachelor Degree<span> - Unknown College in the US</span></h5>
+            <h5>Bachelor Degree<span> - Undeclared College in the US</span></h5>
             <p>Majoring in Computer Science</p>
           </div>
         </div>
@@ -194,7 +193,7 @@
             <div class="hover-items">
               <h3>Project 1</h3>
               <div class="icons">
-                <a href="https://github.com/AureliusNguyen" target="_blank">
+                <a href="https://github.com/aureliusnguyen/StrikeUpTheBand/" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
               </div>
@@ -207,7 +206,7 @@
             <div class="hover-items">
               <h3>Project 2</h3>
               <div class="icons">
-                <a href="https://github.com/AureliusNguyen" target="_blank">
+                <a href="https://github.com/ureliusnguyen/StackUpTheCoin/" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
               </div>
@@ -220,7 +219,7 @@
             <div class="hover-items">
               <h3>Project 3</h3>
               <div class="icons">
-                <a href="https://github.com/AureliusNguyen" target="_blank">
+                <a href="https://github.com/aureliusnguyen/Bounce/" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
               </div>
@@ -233,7 +232,7 @@
             <div class="hover-items">
               <h3>Project 4</h3>
               <div class="icons">
-                <a href="https://github.com/AureliusNguyen" target="_blank">
+                <a href="https://github.com/AureliusNguyen/ShopeeClone/" target="_blank">
                   <i class="fab fa-github"></i>
                 </a>
               </div>
@@ -283,7 +282,7 @@
           <div class="contact-content-con">
             <div class="left-contact">
               <h4>Contact me:</h4>
-              <p>If you want something from me..</p>
+              <p>Here's my contact info:</p>
               <div class="contact-info">
                 <div class="contact-item">
                   <div class="icon">
@@ -307,7 +306,7 @@
                   <div class="icon">
                     <i class="fas fa-user-graduate"></i> Education:
                   </div>
-                  <p>HCMUT, Vietnam</p>
+                  <p>Undeclared</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
