--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                   <p>+84 903-300-329</p>
                 </div>
                 <div class="contact-item">
-                  <div class="icon"><i class="fas fa-envelope"></i> Email:</div>
-                  <p>shadowfax611@gmail.com</p>
+                  <div class="icon"><i class="fas fa-envelope"></i> Gmail:</div>
+                  <p>shadowfax611</p>
                 </div>
                 <div class="contact-item">
                   <div class="icon">
